--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+/.apt_generated/
+.classpath
+.settings
+.project
+.factorypath
