--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.xabgesagtx</groupId>
 	<artifactId>telegram-spring-boot-starter-example</artifactId>
-	<version>0.11-SNAPSHOT</version>
+	<version>0.11</version>
 	<packaging>jar</packaging>
 
 	<name>telegram-spring-boot-starter-example</name>
@@ -34,7 +34,8 @@
 		<url>https://github.com/xabgesagtx/telegram-spring-boot-starter-example</url>
 		<connection>scm:git:git://github.com/xabgesagtx/telegram-spring-boot-starter-example.git</connection>
 		<developerConnection>scm:git:git@github.com:xabgesagtx/telegram-spring-boot-starter-example.git</developerConnection>
-	</scm>
+	  <tag>0.11</tag>
+  </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
