--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.xabgesagtx</groupId>
 	<artifactId>telegram-spring-boot-starter-example</artifactId>
-	<version>0.24</version>
+	<version>0.25-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>telegram-spring-boot-starter-example</name>
@@ -34,7 +34,7 @@
 		<url>https://github.com/xabgesagtx/telegram-spring-boot-starter-example</url>
 		<connection>scm:git:git://github.com/xabgesagtx/telegram-spring-boot-starter-example.git</connection>
 		<developerConnection>scm:git:git@github.com:xabgesagtx/telegram-spring-boot-starter-example.git</developerConnection>
-		<tag>0.24</tag>
+		<tag>HEAD</tag>
  	</scm>
 
 	<properties>
